RESOLVED FIXED234893
REGRESSION(r285521): `errors` provided to `ApplePaySession.prototype.completeCouponCodeChange` are ignored
https://bugs.webkit.org/show_bug.cgi?id=234893
Summary REGRESSION(r285521): `errors` provided to `ApplePaySession.prototype.complete...
Devin Rousso
Reported 2022-01-05 12:19:38 PST
.
Attachments
Patch (1.94 KB, patch)
2022-01-05 12:21 PST, Devin Rousso
no flags
Devin Rousso
Comment 1 2022-01-05 12:20:02 PST
Devin Rousso
Comment 2 2022-01-05 12:21:42 PST
EWS
Comment 3 2022-01-05 16:50:31 PST
Committed r287660 (245757@main): <https://commits.webkit.org/245757@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448418 [details].
Note You need to log in before you can comment on or make changes to this bug.