REGRESSION(r285521): `errors` provided to `ApplePaySession.prototype.completeCouponCodeChange` are ignored https://bugs.webkit.org/show_bug.cgi?id=234893 <rdar://problem/86780827>

Reviewed by Tim Horton.

* Platform/cocoa/PaymentAuthorizationPresenter.mm:
(WebKit::PaymentAuthorizationPresenter::completeCouponCodeChange):
Make sure to actually set the `errors` of the `PKPaymentRequestCouponCodeUpdate` using the
`errors` inside `ApplePayShippingMethodUpdate`. This was accidentally removed in r285521.



Canonical link: https://commits.webkit.org/245757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287660 268f45cc-cd09-0410-ab3c-d52691b4dbfc